--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^8.5.2",
     "axios": "^0.17.1",
     "element-ui": "^2.0.9",
+    "fintech-vue-component": "git+http://git:123456@117.36.75.166:3000/web_dev/fintech-vue-component.git",
     "normalize-css": "^2.3.1",
     "rxjs": "^5.5.6",
     "vue": "^2.5.2",
