--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,7 @@
 {
+  "files": [
+    "index.d.ts"
+  ],
   "include": [
     "./src/**/*"
   ],
@@ -19,7 +22,9 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "~/*" : ["src/*"]
+      "~/*": [
+        "src/*"
+      ]
     }
   }
 }
