--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "vuex-persistedstate": "^2.4.2"
   },
   "devDependencies": {
-    "@types/node": "^8.5.2",
     "@types/core-js": "^0.9.43",
+    "@types/node": "^8.5.2",
     "@types/webpack-env": "^1.13.3",
-    "iview-loader": "^1.0.0",
     "autoprefixer": "^7.1.2",
+    "axios-mock-adapter": "^1.10.0",
     "babel-core": "^6.22.1",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
     "babel-loader": "^7.1.1",
@@ -46,6 +46,7 @@
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
+    "iview-loader": "^1.0.0",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
     "node-notifier": "^5.1.2",
