--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "normalize-css": "^2.3.1",
     "rxjs": "^5.5.6",
     "vue": "^2.5.2",
+    "vue-amap": "^0.4.5",
     "vue-class-component": "^6.1.2",
     "vue-inject": "^1.0.1",
     "vue-property-decorator": "^6.0.0",
