--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,13 @@
 {
+  "files": [
+    "index.d.ts"
+  ],
   "include": [
-    "typings/*.d.ts",
-    "src/**/*",
+    "./src/**/*"
   ],
   "exclude": [
     "node_modules"
   ],
-  "compileOnSave": true,
   "compilerOptions": {
     "strict": true,
     "module": "esnext",
@@ -15,7 +16,6 @@
     "noImplicitAny": false,
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
-    "strictFunctionTypes": false,
     "lib": [
       "es2017",
       "dom"
