--- a/package.json
+++ b/package.json
@@ -10,70 +10,70 @@
     "build": "node build/build.js"
   },
   "dependencies": {
-    "axios": "^0.17.1",
-    "iview": "^2.8.0",
-    "md5": "^2.2.1",
-    "normalize-css": "^2.3.1",
-    "qs": "^6.5.1",
-    "rxjs": "^5.5.6",
-    "vue": "^2.5.2",
-    "vue-amap": "^0.4.5",
-    "vue-class-component": "^6.1.2",
+    "axios": "~0.17.1",
+    "iview": "~2.9.2",
+    "md5": "~2.2.1",
+    "normalize-css": "~2.3.1",
+    "qs": "~6.5.1",
+    "rxjs": "~5.5.6",
+    "vue": "~2.5.2",
+    "vue-amap": "~0.4.5",
+    "vue-class-component": "~6.1.2",
     "vue-fintech-component": "git+http://git:123456@117.36.75.166:3000/web_dev/vue-fintech-component.git",
-    "vue-inject": "^1.0.1",
-    "vue-property-decorator": "^6.0.0",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
-    "vuex-class": "^0.3.0",
-    "vuex-persistedstate": "^2.4.2"
+    "vue-inject": "~2.0.0",
+    "vue-property-decorator": "~6.0.0",
+    "vue-router": "~3.0.1",
+    "vuex": "~3.0.1",
+    "vuex-class": "~0.3.0",
+    "vuex-persistedstate": "~2.4.2"
   },
   "devDependencies": {
-    "@types/core-js": "^0.9.43",
-    "@types/node": "^8.5.2",
-    "@types/webpack-env": "^1.13.3",
-    "autoprefixer": "^7.1.2",
-    "axios-mock-adapter": "^1.10.0",
-    "babel-core": "^6.22.1",
-    "babel-helper-vue-jsx-merge-props": "^2.0.3",
-    "babel-loader": "^7.1.1",
-    "babel-plugin-syntax-jsx": "^6.18.0",
-    "babel-plugin-transform-runtime": "^6.22.0",
-    "babel-plugin-transform-vue-jsx": "^3.5.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "chalk": "^2.0.1",
-    "copy-webpack-plugin": "^4.0.1",
-    "cross-env": "^5.1.3",
-    "css-loader": "^0.28.0",
-    "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
-    "fork-ts-checker-webpack-plugin": "^0.3.0",
-    "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
-    "iview-loader": "^1.0.0",
-    "less": "^2.7.3",
-    "less-loader": "^4.0.5",
-    "node-notifier": "^5.1.2",
-    "optimize-css-assets-webpack-plugin": "^3.2.0",
-    "ora": "^1.2.0",
-    "portfinder": "^1.0.13",
-    "postcss-import": "^11.0.0",
-    "postcss-loader": "^2.0.8",
-    "rimraf": "^2.6.0",
-    "semver": "^5.3.0",
-    "shelljs": "^0.7.6",
-    "svg-sprite-loader": "^3.6.2",
-    "ts-loader": "^3.2.0",
-    "typescript": "^2.6.2",
-    "uglifyjs-webpack-plugin": "^1.1.1",
-    "url-loader": "^0.6.2",
-    "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.0.1",
-    "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.6.0",
-    "webpack-bundle-analyzer": "^2.9.0",
-    "webpack-dev-server": "^2.9.1",
-    "webpack-merge": "^4.1.0"
+    "@types/core-js": "~0.9.43",
+    "@types/node": "~9.4.0",
+    "@types/webpack-env": "~1.13.3",
+    "autoprefixer": "~7.2.5",
+    "axios-mock-adapter": "~1.12.0",
+    "babel-core": "~6.26.0",
+    "babel-helper-vue-jsx-merge-props": "~2.0.3",
+    "babel-loader": "~7.1.1",
+    "babel-plugin-syntax-jsx": "~6.18.0",
+    "babel-plugin-transform-runtime": "~6.23.0",
+    "babel-plugin-transform-vue-jsx": "~3.5.0",
+    "babel-preset-env": "~1.6.1",
+    "babel-preset-stage-2": "~6.24.1",
+    "chalk": "~2.3.0",
+    "copy-webpack-plugin": "~4.3.1",
+    "cross-env": "~5.1.3",
+    "css-loader": "~0.28.0",
+    "extract-text-webpack-plugin": "~3.0.0",
+    "file-loader": "~1.1.4",
+    "fork-ts-checker-webpack-plugin": "~0.3.0",
+    "friendly-errors-webpack-plugin": "~1.6.1",
+    "html-webpack-plugin": "~2.30.1",
+    "iview-loader": "~1.1.0",
+    "less": "~2.7.3",
+    "less-loader": "~4.0.5",
+    "node-notifier": "~5.2.1",
+    "optimize-css-assets-webpack-plugin": "~3.2.0",
+    "ora": "~1.4.0",
+    "portfinder": "~1.0.13",
+    "postcss-import": "~11.0.0",
+    "postcss-loader": "~2.1.0",
+    "rimraf": "~2.6.0",
+    "semver": "~5.5.0",
+    "shelljs": "~0.8.1",
+    "svg-sprite-loader": "~3.6.2",
+    "ts-loader": "~3.4.0",
+    "typescript": "~2.7.1",
+    "uglifyjs-webpack-plugin": "~1.1.1",
+    "url-loader": "~0.6.2",
+    "vue-loader": "~14.1.1",
+    "vue-style-loader": "~3.1.2",
+    "vue-template-compiler": "~2.5.2",
+    "webpack": "~3.10.0",
+    "webpack-bundle-analyzer": "~2.10.0",
+    "webpack-dev-server": "~2.11.1",
+    "webpack-merge": "~4.1.0"
   },
   "engines": {
     "node": ">= 4.0.0",
