--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "~0.17.1",
+    "clone": "^2.1.1",
     "iview": "~2.9.2",
     "md5": "~2.2.1",
     "normalize-css": "~2.3.1",
