--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,11 +8,13 @@
   ],
   "compileOnSave": true,
   "compilerOptions": {
-    "strict": true,
+    // "strict": true,
     "module": "esnext",
     "moduleResolution": "node",
     "target": "es5",
     "noImplicitAny": false,
+    "jsx": "preserve",
+    "jsxFactory": "h",
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "strictPropertyInitialization": false,
