--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clone": "^2.1.1",
     "iview": "^2.13.0",
     "md5": "~2.2.1",
+    "moment": "^2.22.1",
     "normalize-css": "~2.3.1",
     "qs": "~6.5.1",
     "rxjs": "^5.5.10",
