--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "babel-core": "~6.26.0",
     "babel-helper-vue-jsx-merge-props": "~2.0.3",
     "babel-loader": "~7.1.1",
+    "babel-plugin-jsx-v-model": "^2.0.3",
     "babel-plugin-syntax-jsx": "~6.18.0",
     "babel-plugin-transform-runtime": "~6.23.0",
     "babel-plugin-transform-vue-jsx": "~3.5.0",
