--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "axios": "~0.17.1",
     "clone": "^2.1.1",
     "iview": "^2.13.0",
+    "lodash.clonedeep": "^4.5.0",
+    "lodash.round": "^4.0.4",
     "md5": "~2.2.1",
     "moment": "^2.22.1",
     "normalize-css": "~2.3.1",
