修改package 项目名称

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "flcms-web",
+  "name": "carfl-web-2.0",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "zhuchentong <2037630@163.com>",
