--- a/package.json
+++ b/package.json
@@ -13,12 +13,13 @@
     "@zct1989/vue-component": "^0.0.3",
     "axios": "~0.17.1",
     "clone": "^2.1.1",
-    "iview": "^2.13.0",
+    "iview": "~2.13.0",
     "lodash.clonedeep": "^4.5.0",
     "lodash.round": "^4.0.4",
     "md5": "~2.2.1",
     "moment": "^2.22.1",
     "normalize-css": "~2.3.1",
+    "prettier": "^1.12.1",
     "qs": "~6.5.1",
     "rxjs": "^5.5.10",
     "vue": "~2.5.2",
