--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "vue-router": "~3.0.1",
     "vuex": "~3.0.1",
     "vuex-class": "~0.3.0",
-    "vuex-persistedstate": "~2.4.2"
+    "vuex-persistedstate": "~2.4.2",
+    "async-validator": "~1.8.2"
   },
   "devDependencies": {
     "@types/core-js": "~0.9.43",
