--- a/package.json
+++ b/package.json
@@ -11,16 +11,19 @@
   },
   "dependencies": {
     "@zct1989/vue-component": "^0.0.3",
+    "async-validator": "~1.8.2",
     "axios": "~0.17.1",
-    "clone": "^2.1.1",
-    "vant": "^1.1.5",
-    "lodash.clonedeep": "^4.5.0",
-    "lodash.round": "^4.0.4",
+    "babel-polyfill": "~6.26.0",
+    "clone": "~2.1.1",
+    "es6-promise": "~4.2.4",
+    "lodash.clonedeep": "~4.5.0",
+    "lodash.round": "~4.0.4",
     "md5": "~2.2.1",
-    "moment": "^2.22.1",
+    "moment": "~2.22.1",
     "normalize-css": "~2.3.1",
     "qs": "~6.5.1",
-    "rxjs": "^5.5.10",
+    "rxjs": "~5.5.10",
+    "vant": "~1.1.5",
     "vue": "~2.5.2",
     "vue-amap": "~0.4.5",
     "vue-class-component": "~6.1.2",
@@ -29,8 +32,7 @@
     "vue-router": "~3.0.1",
     "vuex": "~3.0.1",
     "vuex-class": "~0.3.0",
-    "vuex-persistedstate": "~2.4.2",
-    "async-validator": "~1.8.2"
+    "vuex-persistedstate": "~2.4.2"
   },
   "devDependencies": {
     "@types/core-js": "~0.9.43",
